namespace-nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx
  labels: 
    name: testing
