deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx                 # Nome do Deployment | O nome é único
  namespace: nginx            # Especificando o Namespace "namespace-nginx"
  labels:
    app: nginx                # Nome da Label para identificar nas especificações
spec:                         # Especificação do Deployment
  replicas: 2
  selector:                   # Diz ao Deployment quais Pods ele irá gerenciar
    matchLabels:          
      app: nginx              # Nesse caso ele irá gerenciar os Pods com a label "nginx-server"

  template:                   # Aqui é o Template dos Pods que o Deploymente irá criar
    metadata: 
      labels: 
        app: nginx            # Cada Pod terá o rótulo "nginx"
    spec: 
      containers:
      - name: nginx           # Nome do container no Pod
        image: nginx:latest
        ports:
          - containerPort: 80
