service-nginx.yaml
apiVersion: v1
kind: Service
metadata: 
  name: service-nginx
  namespace: namespace-nginx
spec:
  selector: 
    app: nginx              # Aqui inserimos a Label que configuramos no Seletor do Deployment
  ports: 
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
